# ai-music-web-daw

./: .gitignore  AGENTS.md  CHANGELOG.md  MEMORY.md  STATUS.md  compose_music.py  generate_canon_midi.py  render_music.py  soo_todo.md  start_lobster_daw.bat  start_studio.bat
ACE-Step-1.5/.git_backup/: config  index  packed-refs
ACE-Step-1.5/acestep/api/: job_runtime_state.py  startup_model_init.py
Methodology/: 직렬_단일_Task_협업_방법론.docx  직렬_단일_Task_협업_방법론.md
lobster-ai-daw/: .gitignore  LICENSE  README.md  test_request.json
lobster-ai-daw/backend/: .env.example  download_deps.py  patch_acestep.py  pyproject.toml  requirements.txt
lobster-ai-daw/backend/app/: config.py  main.py
lobster-ai-daw/backend/app/api/: deps.py
lobster-ai-daw/backend/app/api/routes/: audio.py  blocks.py  blocks.py.bak2  midi.py  projects.py  repaint.py  ws.py
lobster-ai-daw/backend/app/models/: block.py  block.py.bak  midi.py  repaint.py
lobster-ai-daw/backend/app/services/: acestep_client.py  analyst.py  block_orchestrator.py  midi_synth.py  midi_transcriber.py  progress_broker.py  state_store.py  state_store.py.bak2  task_registry.py
lobster-ai-daw/backend/app/utils/: audio_utils.py
lobster-ai-daw/docs/: CHANGELOG.md  Lobster_AI_DAW_핸드오프_v2_1_2026-05-26.docx  Lobster_AI_DAW_핸드오프_v2_2_2026-05-26.docx  STATUS.md  architecture_blueprint.md
lobster-ai-daw/frontend/: index.html  package-lock.json  package.json  patch_css.py  vite.config.ts
lobster-ai-daw/scripts/: dev.bat  health_check.bat  setup.bat  stop_all.bat
memory/: 2026-05-19.md  2026-05-21.md
(+54 files in other folders)
