[project]
name = "lobster-ai-daw-backend"
version = "0.1.0"
description = "FastAPI Wrapper Backend for Lobster AI Web DAW"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "pydub>=0.25.1",
    "setuptools<70",
    "basic-pitch>=0.4.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorflow",
    "tensorflow-intel",
    "loguru",
]
